--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
 <body>
 	<h1>Group Members</h1>
 	<p>Member 1: Ethan Sean Gapulan</p>
-	<p>Member 2:</p>
-	<p>Member 3:</p>
-	<p>Member 4:</p>
+	<p>Member 2: John Dave Valentin</p>
+	<p>Member 3: Marc Raven Sian</p>
+	<p>Member 4: Joseph Patrick Salomeo</p>
 </body>
 </html>
