--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Group Members</h1>
-	<p>Member 1: Ethan Sean Gapulan</p>
+	<p>Member 1: Ethan Sean Gapulan - subject-to-change</p>
 	<p>Member 2: John Dave Valentin</p>
 	<p>Member 3: Marc Raven Sian</p>
 	<p>Member 4: Joseph Patrick Salomeo</p>
