--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Group( name subject to change)</title>
+	<title> JJEM Alert</title>
 </head>
 <body>
 	<h1>Group Members</h1>
