--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
 	<p>Member 1: Ethan Sean Gapulan - subject-to-change</p>
 	<p>Member 2: John Dave Valentin - subject-to-change</p>
 	<p>Member 3: Marc Raven Sian - subject-to-change</p>
-	<p>Member 4: Joseph Patrick Salomeo</p>
+	<p>Member 4: Joseph Patrick Salomeo - subject-to-change</p>
 </body>
 </html>
